Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
5.3.12
-
None
-
None
Description
This script crashes mysqld:
set @@time_zone='+00:00'; |
drop table if exists t1; |
create table t1 (a datetime(4) not null); |
insert into t1 values ('2001-01-01 00:00:00'),('2000-00-00 00:00:00'); |
select unix_timestamp(a) from t1 order by 1; |
The problem seems to be in a missing call for:
set_persist_maybe_null(1);
which was added in 5.5.